--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="content">
             <h2>The most trusted GST <br />e-filing platform in India</h2>
             <p>We are professionals who are subject experts in the area of GST in India.</p>
-            <a href="https://play.google.com/store/apps/details?id=jp.konami.pesam"><button>Download</button></a>
+            <a href=""><button>Download</button></a>
         </div>
     </section>
     
