--- a/Data/pricing.html
+++ b/Data/pricing.html
@@ -22,7 +22,7 @@
             $(".plan-select a").click(function (e) {
                 if (!$(this).closest('.plan').hasClass('featured')) {
                     e.preventDefault();
-                    alert("Please select the Professional plan , all the other plans are Nig**rs.");
+                    alert("Please select the Professional plan.");
                 }
             });
         });
